--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <h1>My Library</h1>
+
     <script src="script.js" defer></script>
 </body>
 </html>
