--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <h1>My Library</h1>
+    <div class="newbtn">
+      <button type="button">New Book</button>
+    </div>
+    <div class="dialog-container">
+      <dialog>
+        <button autofocus>Close</button>
+        <p>Book Description</p>
+      </dialog>
+    </div>
 
     <script src="script.js" defer></script>
-</body>
+  </body>
 </html>
