--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>My Library</h1>
+    <h1 class="main-title">My Library</h1>
     <div class="newbtn">
       <button type="button">New Book</button>
     </div>
@@ -18,12 +18,12 @@
         </div>
         <form class="add-Book-Form">
           <div>
-            <label for="author">Author</label>
-            <input type="text" name="Author" id="author" required/>
-          </div>
-          <div>
             <label for="title">Title</label>
             <input type="text" name="title" id="title" required/>
+          </div>
+          <div>
+            <label for="author">Author</label>
+            <input type="text" name="Author" id="author" required/>
           </div>
           <div>
             <label for="pages">Pages</label>
@@ -39,7 +39,24 @@
         </form>
       </dialog>
     </div>
-    <div class="books-container"></div>
+    <div class="books-container">
+      <h1>My books</h1>
+      <div class="cards-container">
+        <!-- <div class="card">
+          <div class="card-description">
+            <h2 id="Title">Name</h2>
+            <h2 id="Author">Author</h2>
+            <h2 id="Pages">Pages</h2>
+            <h2 id="Read">Read</h2>
+          </div>
+          <div class="card-buttons">
+            <button id="card-red-button">Read</button>
+            <button id="card-remove-button">Remove</button>
+          </div>          
+        </div> -->
+        </div>
+      </div>
+    </div>
     <script src="script.js" defer></script>
   </body>
 </html>
