Added functionality to 'Remove' and 'Toggle Read'

--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
     <div class="books-container">
       <h1>My books</h1>
       <div class="cards-container">
-        <!-- <div class="card">
-          <div class="card-description">
-            <h2 id="Title">Name</h2>
-            <h2 id="Author">Author</h2>
-            <h2 id="Pages">Pages</h2>
-            <h2 id="Read">Read</h2>
-          </div>
-          <div class="card-buttons">
-            <button id="card-red-button">Read</button>
-            <button id="card-remove-button">Remove</button>
-          </div>          
-        </div> -->
+        <!-- <div class="card" data-id="94659fde-7568-4e9c-bc5c-b6c6dfd69e41">
+              <div class="card-description">
+                <h1>Atomic Habits</h1>
+                <h3>James Clear</h3>
+                <h3>200</h3>
+                <h2 class="read-status">Unread</h2>
+              </div>
+              <div class="card-buttons">
+                <button class="card-read-button">Toggle Read</button>
+                <button class="card-remove-button">Remove</button>
+              </div>
+            </div> -->
         </div>
       </div>
     </div>
